# romio

./: .travis.yml  Cargo.toml  LICENSE  README.md  aliases.js  rustdoc.css  search-index.js
crossbeam_utils/: all.html  index.html  sidebar-items.js  struct.CachePadded.html
either/: all.html  enum.Either.html  index.html  macro.try_left.html  macro.try_right.html
examples/: echo-udp.rs  echo.rs  hello_world.rs  print_each_packet.rs  shakespeare-client.rs  shakespeare.rs  tinydb.rs  udp-codec.rs
futures/: all.html  index.html  macro.join.html  macro.pending.html  macro.poll.html  macro.ready.html  macro.select.html  macro.try_join.html  macro.try_poll.html  macro.try_ready.html  sidebar-items.js
futures_channel/: all.html  index.html
futures_core/: all.html  index.html
futures_executor/: all.html  fn.block_on.html  fn.block_on_stream.html  fn.enter.html  index.html  struct.BlockingStream.html  struct.Enter.html  struct.EnterError.html  struct.LocalPool.html  struct.LocalSpawner.html  struct.ThreadPool.html  struct.ThreadPoolBuilder.html
futures_io/: all.html  enum.ErrorKind.html  index.html  struct.Error.html  struct.Initializer.html  struct.IoVec.html  trait.AsyncRead.html  trait.AsyncWrite.html  type.Result.html
futures_sink/: all.html  enum.VecSinkError.html  index.html  trait.Sink.html
futures_util/: all.html  index.html  macro.join.html  macro.pending.html  macro.poll.html  macro.ready.html  macro.select.html  macro.try_join.html  macro.try_poll.html  macro.try_ready.html  sidebar-items.js
iovec/: struct.IoVec.html
lazy_static/: index.html
lazycell/: struct.AtomicLazyCell.html  struct.LazyCell.html
libc/: enum.DIR.html  enum.FILE.html  enum.c_void.html  enum.fpos64_t.html  enum.fpos_t.html  enum.locale_t.html  enum.timezone.html  struct.Dl_info.html  struct.Elf32_Chdr.html  struct.Elf32_Ehdr.html  struct.Elf32_Phdr.html  struct.Elf32_Shdr.html  struct.Elf32_Sym.html  struct.Elf64_Chdr.html  struct.Elf64_Ehdr.html  struct.Elf64_Phdr.html  struct.Elf64_Shdr.html  struct.Elf64_Sym.html  struct.__exit_status.html  struct.__timeval.html  struct._libc_fpstate.html  struct._libc_fpxreg.html  struct._libc_xmmreg.html  struct.addrinfo.html  struct.aiocb.html  struct.arpd_request.html  struct.arphdr.html  struct.arpreq.html  struct.arpreq_old.html  struct.cmsghdr.html  struct.cpu_set_t.html  struct.dirent.html  struct.dirent64.html  struct.dl_phdr_info.html  struct.dqblk.html  struct.epoll_event.html  struct.fd_set.html  struct.ff_condition_effect.html  struct.ff_constant_effect.html  struct.ff_effect.html  (+106 more)
lock_api/: index.html  struct.GuardNoSend.html  struct.GuardSend.html  struct.MappedMutexGuard.html  struct.MappedReentrantMutexGuard.html  struct.MappedRwLockReadGuard.html  struct.MappedRwLockWriteGuard.html  struct.Mutex.html  struct.MutexGuard.html  struct.ReentrantMutex.html  struct.ReentrantMutexGuard.html  struct.RwLock.html  struct.RwLockReadGuard.html  struct.RwLockUpgradableReadGuard.html  struct.RwLockWriteGuard.html
log/: enum.Level.html  enum.LevelFilter.html  index.html  struct.Metadata.html  struct.MetadataBuilder.html  struct.ParseLevelError.html  struct.Record.html  struct.RecordBuilder.html  struct.SetLoggerError.html
mio/: struct.Events.html  struct.Poll.html  struct.PollOpt.html  struct.Ready.html  struct.Registration.html  struct.SetReadiness.html  struct.Token.html
mio_uds/: struct.UnixDatagram.html  struct.UnixListener.html  struct.UnixStream.html
net2/: struct.TcpBuilder.html  struct.UdpBuilder.html  trait.TcpListenerExt.html  trait.TcpStreamExt.html  trait.UdpSocketExt.html
owning_ref/: index.html  struct.OwningHandle.html  struct.OwningRef.html  struct.OwningRefMut.html  trait.CloneStableAddress.html  trait.Erased.html  trait.IntoErased.html  trait.StableAddress.html  trait.ToHandle.html  trait.ToHandleMut.html  type.ArcRef.html  type.BoxRef.html  type.BoxRefMut.html  type.ErasedArcRef.html  type.ErasedBoxRef.html  type.ErasedBoxRefMut.html  type.ErasedRcRef.html  type.MutexGuardRef.html  type.MutexGuardRefMut.html  type.RcRef.html  type.RefMutRef.html  type.RefMutRefMut.html  type.RefRef.html  type.RwLockReadGuardRef.html  type.RwLockWriteGuardRef.html  type.RwLockWriteGuardRefMut.html  type.StringRef.html  type.StringRefMut.html  type.VecRef.html  type.VecRefMut.html
parking_lot/: enum.OnceState.html  struct.Condvar.html  struct.Once.html  struct.RawMutex.html  struct.RawRwLock.html  struct.RawThreadId.html  struct.WaitTimeoutResult.html
parking_lot_core/: enum.FilterOp.html  enum.ParkResult.html  enum.RequeueOp.html  struct.ParkToken.html  struct.SpinWait.html  struct.UnparkResult.html  struct.UnparkToken.html
pin_utils/: all.html  index.html  macro.pin_mut.html  macro.unsafe_pinned.html  macro.unsafe_unpinned.html
rand/: all.html  enum.ErrorKind.html  fn.random.html  fn.sample.html  fn.thread_rng.html  fn.weak_rng.html  index.html  struct.AsciiGenerator.html  struct.ChaChaRng.html  struct.Closed01.html  struct.Error.html  struct.Generator.html  struct.Isaac64Rng.html  struct.IsaacRng.html  struct.Open01.html  struct.StdRng.html  struct.ThreadRng.html  struct.XorShiftRng.html  (+7 more)
romio-async-await/: Cargo.toml
romio-async-await/examples/: Cargo.toml
romio-buf/: Cargo.toml
romio-channel/: Cargo.toml
romio-codec/: Cargo.toml
romio-codec/src/: lib.rs
romio-current-thread/: Cargo.toml
romio-executor/: Cargo.toml
romio-fs/: Cargo.toml
romio-io/: Cargo.toml
romio-reactor/: Cargo.toml
romio-reactor/benches/: basic.rs
romio-reactor/src/: background.rs  lib.rs  poll_evented.rs  registration.rs  sharded_rwlock.rs
romio-signal/: Cargo.toml
romio-tcp/: Cargo.toml
romio-tcp/src/: lib.rs  listener.rs  stream.rs
romio-tcp/tests/: chain.rs  echo.rs  limit.rs  stream-buffered.rs  tcp.rs
romio-threadpool/: Cargo.toml
romio-timer/: Cargo.toml
romio-tls/: Cargo.toml
romio-udp/: Cargo.toml
romio-udp/src/: lib.rs  socket.rs
romio-udp/tests/: udp.rs
romio-uds/: Cargo.toml
romio-uds/src/: lib.rs  listener.rs  stream.rs  ucred.rs
romio-uds/src/datagram/: datagram.rs  recv_dgram.rs
(+1100 files in other folders)
