[package]
name = "romio"
edition = "2018"

# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create "v0.1.x" git tag.
version = "0.3.0-alpha"
authors = ["The Rust Networking Working Group", "Carl Lerche <me@carllerche.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rust-lang-nursery/romio"
description = """
Event loop and I/O resources for asynchronous network services using futures
"""
categories = ["asynchronous", "network-programming"]

[dependencies]
crossbeam-utils = "0.6.0"
iovec = "0.1"
lazy_static = "1.0.2"
log = "0.4.1"
mio = "0.6.14"
mio-uds = "0.6.7"
num_cpus = "1.8.0"
parking_lot = "0.6.3"
slab = "0.4.1"
libc = "0.2.43"

[dependencies.futures]
version = "0.3.0-alpha.9"
git = "https://github.com/rust-lang-nursery/futures-rs"
package = "futures-preview"

[dev-dependencies.env_logger]
version = "0.5"
default-features = false
