[package]
name = "romio"
edition = "2018"

# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create "v0.1.x" git tag.
version = "0.3.0-alpha.1"
authors = ["The Rust Networking Working Group", "Carl Lerche <me@carllerche.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/withoutboats/romio"
documentation = "https://withoutboats.github.io/romio/romio"
description = """
Event loop and I/O resources for asynchronous network services using futures
"""
categories = ["asynchronous", "network-programming"]

[dependencies]
crossbeam-utils = "0.6.0"
iovec = "0.1"
lazy_static = "1.0.2"
log = "0.4.1"
mio = "0.6.14"
mio-uds = "0.6.7"
num_cpus = "1.8.0"
parking_lot = "0.6.3"
slab = "0.4.0"
libc = "0.2.43"

[dependencies.futures]
version = "0.3.0-alpha.11"
package = "futures-preview"

[dev-dependencies]
tempdir = "0.3.7"
rand = "0.6.1"

[dev-dependencies.env_logger]
version = "0.5"
default-features = false
