[package]
name = "romio"
edition = "2018"

# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create "v0.1.x" git tag.
version = "0.3.0-alpha.10"
authors = ["The Rust Networking Working Group", "Carl Lerche <me@carllerche.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/withoutboats/romio"
documentation = "https://withoutboats.github.io/romio/romio"
description = """
Event loop and I/O resources for asynchronous network services using futures
"""
categories = ["asynchronous", "network-programming"]

[dependencies]
crossbeam-utils = "0.6.5"
lazy_static = "1.2.0"
log = "0.4.6"
mio = "0.6.16"
mio-uds = "0.6.7"
num_cpus = "1.10.0"
parking_lot = "0.9.0"
slab = "0.4.2"
libc = "0.2.48"
async-datagram = "3.0.0"
async-ready = "3.0.0"
futures-preview = "0.3.0-alpha.18"

[dev-dependencies]
bytes = "0.4.11"
tempdir = "0.3.7"
rand = "0.7.0"

[dev-dependencies.env_logger]
version = "0.6.0"
default-features = false
