[package]
name = "romio-async-await"

# When releasing to crates.io:
# - Update html_root_url.
version = "0.1.4"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
repository = "https://github.com/romio-rs/romio"
homepage = "https://romio.rs"
documentation = "https://docs.rs/romio-async-await/0.1.3"
description = """
Experimental async/await support for Tokio
"""
categories = ["asynchronous"]

[features]
# This feature comes with no promise of stability. Things will
# break with each patch release. Use at your own risk.
async-await-preview = ["futures/nightly"]

[dependencies]
futures = "0.1.23"
romio-io = { version = "0.1.7", path = "../romio-io" }

[dev-dependencies]
bytes = "0.4.9"
romio = { version = "0.1.8", path = ".." }
# romio-codec = { version = "0.1.0", path = "../romio-codec" }
hyper = "0.12.8"
