[package]
name = "romio-buf"

# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
repository = "https://github.com/romio-rs/romio"
homepage = "https://romio.rs"
documentation = "https://docs.rs/romio-buf/0.1.0"
description = """
Asynchronous stream of byte buffers
"""
categories = ["asynchronous"]

[dependencies]
bytes = { version = "0.4.10", features = [ "either" ] }
either = "1.5"
futures = "0.1.23"
