[package]
name = "romio-channel"

# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
repository = "https://github.com/romio-rs/romio"
homepage = "https://romio.rs"
documentation = "https://docs.rs/romio-channel/0.1.0"
description = """
Channels for asynchronous communication using Tokio.
"""
categories = ["asynchronous"]

[dependencies]
futures = "0.1.23"
