[package]
name = "romio-codec"

# When releasing to crates.io:
# - Update html_root_url.
# - Update doc URL.
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.1"
authors = ["Carl Lerche <me@carllerche.com>", "Bryan Burgers <bryan@burgers.io>"]
license = "MIT"
repository = "https://github.com/romio-rs/romio"
homepage = "https://romio.rs"
documentation = "https://docs.rs/romio-codec/0.1.1/romio_codec"
description = """
Utilities for encoding and decoding frames.
"""
categories = ["asynchronous"]

[dependencies]
romio-io = { version = "0.1.7", path = "../romio-io" }
bytes = "0.4.7"
futures = "0.1.18"
