[package]
name = "romio-current-thread"

# When releasing to crates.io:
# - Update html_root_url.
# - Update doc URL
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.3"
documentation = "https://docs.rs/romio-current-thread/0.1.3/romio_current_thread"
repository = "https://github.com/romio-rs/romio"
homepage = "https://github.com/romio-rs/romio"
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>"]
description = """
Single threaded executor which manage many tasks concurrently on the current thread.
"""
keywords = ["futures", "romio"]
categories = ["concurrency", "asynchronous"]

[dependencies]
romio-executor = { version = "0.1.5", path = "../romio-executor" }
futures = "0.1.19"
