[package]
name = "romio-executor"

# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create "v0.1.x" git tag.
version = "0.1.5"
documentation = "https://docs.rs/romio-executor/0.1.5/romio_executor"
repository = "https://github.com/romio-rs/romio"
homepage = "https://github.com/romio-rs/romio"
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>"]
description = """
Future execution primitives
"""
keywords = ["futures", "romio"]
categories = ["concurrency", "asynchronous"]

[dependencies]
futures = "0.1.19"
