[package]
name = "romio-fs"

# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create "v0.1.x" git tag.
version = "0.1.4"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/romio-rs/romio"
homepage = "https://romio.rs"
documentation = "https://docs.rs/romio-fs/0.1.4/romio_fs"
description = """
Filesystem API for Tokio.
"""
keywords = ["romio", "futures", "fs", "file", "async"]
categories = ["asynchronous", "network-programming", "filesystem"]

[dependencies]
futures = "0.1.21"
romio-threadpool = { version = "0.1.3", path = "../romio-threadpool" }
romio-io = { version = "0.1.6", path = "../romio-io" }

[dev-dependencies]
rand = "0.5"
tempfile = "3"
romio-io = { version = "0.1.6", path = "../romio-io" }
romio-codec = { version = "0.1.0", path = "../romio-codec" }
romio = { version = "0.1.7", path = ".." }
