[package]
name = "romio-io"

# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create "v0.1.x" git tag.
version = "0.1.10"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
repository = "https://github.com/romio-rs/romio"
homepage = "https://romio.rs"
documentation = "https://docs.rs/romio-io/0.1.10/romio_io"
description = """
Core I/O primitives for asynchronous I/O in Rust.
"""
categories = ["asynchronous"]

[dependencies]
bytes = "0.4.7"
futures = "0.1.18"
log = "0.4"

[dev-dependencies]
romio-current-thread = { version = "0.1.1", path = "../romio-current-thread" }
