cargo-features = ["rename-dependency"]

[package]
name = "romio-reactor"
edition = "2018"

# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create "v0.1.x" git tag.
version = "0.1.6"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/romio-rs/romio"
homepage = "https://romio.rs"
documentation = "https://docs.rs/romio-reactor/0.1.6/romio_reactor"
description = """
Event loop that drives romio I/O resources.
"""
categories = ["asynchronous", "network-programming"]

[dependencies]
crossbeam-utils = "0.6.0"
# futures = "0.1.19"
lazy_static = "1.0.2"
log = "0.4.1"
mio = "0.6.14"
num_cpus = "1.8.0"
parking_lot = "0.6.3"
slab = "0.4.0"

[dependencies.futures]
version = "0.3.0-alpha.9"
git = "https://github.com/rust-lang-nursery/futures-rs"
package = "futures-preview"

[dev-dependencies]
num_cpus = "1.8.0"
