[package]
name = "romio-tcp"

# When releasing to crates.io:
# - Update html_root_url.
# - Update doc url
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.1.2"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
repository = "https://github.com/romio-rs/romio"
homepage = "https://romio.rs"
documentation = "https://docs.rs/romio-tcp/0.1.2/romio_tcp"
description = """
TCP bindings for romio.
"""
categories = ["asynchronous"]

[dependencies]
romio-io = { version = "0.1.6", path = "../romio-io" }
romio-reactor = { version = "0.1.1", path = "../romio-reactor" }
bytes = "0.4"
mio = "0.6.14"
iovec = "0.1"
futures = "0.1.19"

[dev-dependencies]
env_logger = { version = "0.5", default-features = false }
