[package]
name = "romio-udp"

# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create "v0.1.x" git tag.
version = "0.1.2"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
documentation = "https://docs.rs/romio-udp/0.1.2/romio_udp"
repository = "https://github.com/romio-rs/romio"
homepage = "https://romio.rs"
description = """
UDP bindings for romio.
"""
categories = ["asynchronous"]

[dependencies]
romio-codec = { version = "0.1.0", path = "../romio-codec" }
romio-io = { version = "0.1.7", path = "../romio-io" }
romio-reactor = { version = "0.1.1", path = "../romio-reactor" }
bytes = "0.4"
mio = "0.6.14"
log = "0.4"
futures = "0.1.19"

[dev-dependencies]
env_logger = { version = "0.5", default-features = false }
