cargo-features = ["rename-dependency"]

[package]
name = "tokio-udp"
edition = "2018"

# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Update doc URL.
# - Create "v0.1.x" git tag.
version = "0.1.2"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
documentation = "https://docs.rs/tokio-udp/0.1.2/tokio_udp"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://tokio.rs"
description = """
UDP bindings for tokio.
"""
categories = ["asynchronous"]

[dependencies]
romio-reactor = { version = "0.1.1", path = "../romio-reactor" }
bytes = "0.4"
mio = "0.6.14"
log = "0.4"

[dependencies.futures]
version = "0.3.0-alpha.9"
git = "https://github.com/rust-lang-nursery/futures-rs"
package = "futures-preview"

[dev-dependencies]
env_logger = { version = "0.5", default-features = false }
