[package]
name = "romio-uds"
# When releasing to crates.io:
# - Update html_root_url.
# - Update doc url
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.2.3"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
repository = "https://github.com/romio-rs/romio"
homepage = "https://github.com/romio-rs/romio"
documentation = "https://docs.rs/romio-uds/0.2.3/romio_uds/"
description = """
Unix Domain sockets for Tokio
"""
categories = ["asynchronous"]

[dependencies]
bytes = "0.4.8"
futures = "0.1.21"
iovec = "0.1.2"
libc = "0.2.42"
log = "0.4.2"
mio = "0.6.14"
mio-uds = "0.6.5"
romio-reactor = { version = "0.1.1", path = "../romio-reactor" }
romio-io = { version = "0.1.6", path = "../romio-io" }

[dev-dependencies]
romio = { version = "0.1.6", path = "../" }
tempfile = "3"
