[package]
name = "examples"
edition = "2018"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"

# Break out of the parent workspace
[workspace]

[[bin]]
name = "chat"
path = "src/chat.rs"

[[bin]]
name = "echo_client"
path = "src/echo_client.rs"

[[bin]]
name = "echo_server"
path = "src/echo_server.rs"

[[bin]]
name = "hyper"
path = "src/hyper.rs"

[dependencies]
romio = { version = "0.1.0", path = "../..", features = ["async-await-preview"] }
futures = "0.1.23"
bytes = "0.4.9"
hyper = "0.12.8"

# Avoid using crates.io for Tokio dependencies
[patch.crates-io]
romio = { path = "../.." }
romio-async-await  = { path = "../" }
romio-codec = { path = "../../romio-codec" }
romio-current-thread = { path = "../../romio-current-thread" }
romio-executor = { path = "../../romio-executor" }
romio-fs = { path = "../../romio-fs" }
romio-io = { path = "../../romio-io" }
romio-reactor = { path = "../../romio-reactor" }
romio-signal = { path = "../../romio-signal" }
romio-tcp = { path = "../../romio-tcp" }
romio-threadpool = { path = "../../romio-threadpool" }
romio-timer = { path = "../../romio-timer" }
romio-tls = { path = "../../romio-tls" }
romio-udp = { path = "../../romio-udp" }
romio-uds = { path = "../../romio-uds" }
